--- a/spring-boot-reactive-exercise/src/main/resources/application.properties
+++ b/spring-boot-reactive-exercise/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=reactive-exercise
 
 server.port=2026
+
+server.jetty.threads.max=10
+spring.threads.virtual.enabled=true
+
+#ab -n 500 -c 50  http://localhost:2026/products
