--- a/spring-boot-exercise/src/main/resources/application.properties
+++ b/spring-boot-exercise/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=exercise
 
 server.port=2025
+
+server.tomcat.threads.max=10
+spring.threads.virtual.enabled=true
+
+#ab -n 500 -c 50  http://localhost:2025/products
